[gd_scene load_steps=9 format=3 uid="uid://clbapexwfoqtu"]

[ext_resource type="Script" path="res://core/ui/card_ui/disks/steam_removable_media.gd" id="1_jof60"]
[ext_resource type="Resource" uid="uid://dgi16frh3mgj8" path="res://core/ui/card_ui/settings/settings_menu_focus.tres" id="3_k3jg3"]
[ext_resource type="PackedScene" uid="uid://shvyhrv5sx3v" path="res://core/systems/state/state_watcher.tscn" id="4_0ytqd"]
[ext_resource type="PackedScene" uid="uid://8m20p2s0v5gb" path="res://core/systems/input/focus_group.tscn" id="4_orkfl"]
[ext_resource type="PackedScene" uid="uid://caeaxm6st4a4u" path="res://core/ui/components/drive_card.tscn" id="5_lw0ib"]
[ext_resource type="Resource" uid="uid://cn236k0ajm0uw" path="res://assets/state/states/settings_disks.tres" id="5_qsrga"]
[ext_resource type="PackedScene" uid="uid://bw8113ocotx2r" path="res://core/systems/effects/fade_effect.tscn" id="6_ehd7y"]
[ext_resource type="Script" path="res://core/systems/input/scroller_joystick.gd" id="7_4j6qh"]

[node name="SteamRemovableMedia" type="ScrollContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jof60")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="DriveCardContainer" type="HFlowContainer" parent="MarginContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="FocusGroup" parent="MarginContainer/DriveCardContainer" instance=ExtResource("4_orkfl")]
unique_name_in_owner = true
focus_stack = ExtResource("3_k3jg3")

[node name="DriveCard" parent="MarginContainer/DriveCardContainer" instance=ExtResource("5_lw0ib")]
layout_mode = 2

[node name="DriveCard2" parent="MarginContainer/DriveCardContainer" instance=ExtResource("5_lw0ib")]
layout_mode = 2

[node name="DriveCard3" parent="MarginContainer/DriveCardContainer" instance=ExtResource("5_lw0ib")]
layout_mode = 2

[node name="StateWatcher" parent="." instance=ExtResource("4_0ytqd")]
state = ExtResource("5_qsrga")

[node name="FadeEffect" parent="StateWatcher" node_paths=PackedStringArray("target") instance=ExtResource("6_ehd7y")]
target = NodePath("../..")
on_signal = "state_entered"
fade_out_signal = "state_exited"
on_signal = "state_entered"

[node name="ScrollerJoystick" type="Node" parent="."]
script = ExtResource("7_4j6qh")
